--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -303,7 +303,7 @@
   }
 
   .compass_grid img {
-    width: 450px;
+    width: 350px;
   }
 
   .home_grid {
